@@ -1,10 +1,12 @@
 plugins {
     kotlin("jvm") version "2.1.20"
     application
+    id("io.github.jwharm.flatpak-gradle-generator") version "1.4.0"
 }
 
 application {
     mainClass = "main.MainKt"
+    applicationDefaultJvmArgs += "--enable-native-access=ALL-UNNAMED"
 }
 
 group = "org.example"
@@ -12,6 +14,7 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+    maven("build/repository")
 }
 
 dependencies {
@@ -20,9 +23,19 @@ dependencies {
     implementation("io.github.jwharm.javagi:adw:0.12.0")
 }
 
+tasks.flatpakGradleGenerator {
+    outputFile = file("$rootDir/flatpak/maven-dependencies.json")
+    downloadDirectory = "build/repository"
+}
+
+tasks.installDist {
+    destinationDir = file("/app/HelloApp")
+}
+
 tasks.test {
     useJUnitPlatform()
 }
+
 kotlin {
-    jvmToolchain(22)
+    jvmToolchain(23)
 }
